--- a/Example/Resources/Base.lproj/Main.storyboard
+++ b/Example/Resources/Base.lproj/Main.storyboard
@@ -293,6 +293,9 @@
                                         <state key="normal" title="SEND">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="sendAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="2rx-JA-IIl"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
